Update index.html with URLs and weights for 2022

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <body>
 <script type="text/javascript">
 const urls = [
-  "https://google.com",
-  "https://twitter.com",
-  "https://facebook.com"
+  "https://digitalcookie.girlscouts.org/scout/rebecca461315",
+  "https://digitalcookie.girlscouts.org/scout/susanna61460"
 ];
-const weights = [0.6, 0.3, 0.1];
+const weights = [0.6, 0.4];
 
 var random = Math.random();
 var cutoff = weights[0];
